# comp_firm_nosql

./: .githooks.ini  .gitignore  LICENSE  README.md  lint-staged.sh  pyproject.toml
app/: .env.example  env.py
app/mongo/: __init__.py  admin.py  collections.py  secrets.py
