[tool.poetry]
name = "comp_firm_nosql"
version = "0.1.0"
description = ""
authors = ["genndy007 <kochevgenazp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
python-githooks = "^1.0.7"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
